# api/cargoApi.go
@@ -6,6 +6,7 @@ import (
 	"github.com/timchine/jxc/api/dto"
 	"github.com/timchine/jxc/model"
 	"gorm.io/gorm"
+	"math"
 	"strconv"
 )
 
@@ -15,6 +16,7 @@ type ICargoApi interface {
 	UpdateCargoKind() gin.HandlerFunc
 	DeleteCargoKind() gin.HandlerFunc
 	SearchCargoKind() gin.HandlerFunc
+	AddCargo() gin.HandlerFunc
 }
 
 type cargoApi struct {
@@ -29,13 +31,13 @@ func NewCargoApi(db *gorm.DB) ICargoApi {
 // @Description	新增货品种类，新增种类时同时新增种类相关规格属性
 // @Accept			json
 // @Produce		json
-// @Param			货品种类	body		dto.ReqAddCargoKind	true	"货品种类和属性"
+// @Param			货品种类	body		dto.CargoKindWithAttrs	true	"货品种类和属性"
 // @Response		200		{object}	Response			"status 200 表示成功 否则提示msg内容"
 // @Router			/cargo_kind [post]
 func (c *cargoApi) AddCargoKind() gin.HandlerFunc {
 	return func(ctx *gin.Context) {
 		var (
-			req dto.ReqAddCargoKind
+			req dto.CargoKindWithAttrs
 			err error
 			res Response
 		)
@@ -71,7 +73,7 @@ func (c *cargoApi) AddCargoKind() gin.HandlerFunc {
 // @Summary		获取货品详情
 // @Description	获取货品详情，获取货品详情和相关属性
 // @Param			ck_id	path		int					true	"货品种类ID"
-// @Response		200		{object}	dto.ReqAddCargoKind	"status 200 表示成功 否则提示msg内容"
+// @Response		200		{object}	dto.CargoKindWithAttrs	"status 200 表示成功 否则提示msg内容"
 // @Router			/cargo_kind/{ck_id} [get]
 func (c *cargoApi) GetCargoKind() gin.HandlerFunc {
 	return func(ctx *gin.Context) {
@@ -80,7 +82,7 @@ func (c *cargoApi) GetCargoKind() gin.HandlerFunc {
 			id   int
 			err  error
 			res  Response
-			data dto.ReqAddCargoKind
+			data dto.CargoKindWithAttrs
 		)
 		req = ctx.Param("ck_id")
 		id, err = strconv.Atoi(req)
@@ -109,13 +111,13 @@ func (c *cargoApi) GetCargoKind() gin.HandlerFunc {
 // @Description	修改货品种类
 // @Accept			json
 // @Produce		json
-// @Param			货品种类	body		dto.ReqAddCargoKind	true	"货品种类和属性"
+// @Param			货品种类	body		dto.CargoKindWithAttrs	true	"货品种类和属性"
 // @Response		200		{object}	Response			"status 200 表示成功 否则提示msg内容"
 // @Router			/cargo_kind [put]
 func (c *cargoApi) UpdateCargoKind() gin.HandlerFunc {
 	return func(ctx *gin.Context) {
 		var (
-			req dto.ReqAddCargoKind
+			req dto.CargoKindWithAttrs
 			err error
 			res Response
 		)
@@ -144,7 +146,7 @@ func (c *cargoApi) UpdateCargoKind() gin.HandlerFunc {
 		}
 
 		tx.Commit()
-		res.Success(ctx, req)
+		res.Success(ctx)
 	}
 }
 
@@ -187,17 +189,57 @@ func (c *cargoApi) DeleteCargoKind() gin.HandlerFunc {
 // @Summary		搜索货品种类
 // @Description	通过货品code 或者 货品名称搜索 货品种类
 // @Param			search	query		string					false	"货品code 或者 货品名称"
-// @Response		200		{object}	[]dto.ReqAddCargoKind	"status 200 表示成功 否则提示msg内容"
+// @Param			page	query		string					false	"页数"
+// @Param			size	query		string					false	"每页条数"
+// @Response		200		{object}	[]model.CargoKind	"status 200 表示成功 否则提示msg内容"
 // @Router			/cargo_kind/_search [get]
 func (c *cargoApi) SearchCargoKind() gin.HandlerFunc {
 	return func(ctx *gin.Context) {
 		var (
-			//	req  string
-			//	err  error
+			req  dto.ReqSearchCargoKind
+			err  error
 			data []model.CargoKind
+			res  Response
 		)
-		//req = ctx.Query("search")
-		c.Find(&data)
-		fmt.Println(data)
+
+		err = ctx.BindQuery(&req)
+		if err != nil {
+			Log().Error(err.Error())
+			res.Error(ctx, 500, "参数错误")
+			return
+		}
+		if req.Page == 0 {
+			req.Page = 1
+		}
+		if req.Size == 0 {
+			req.Size = 10
+		}
+		tx := c.Model(&model.CargoKind{}).Where("status != 8")
+		if req.Search != "" {
+			search := fmt.Sprintf("%%%s%%", req.Search)
+			tx = tx.Where("ck_cod like ? or ck_name like ?", search, search)
+		}
+		err = tx.Count(&req.Total).Limit(req.Size).Offset((req.Page - 1) * req.Size).Find(&data).Error
+		if err != nil {
+			Log().Error(err.Error())
+			res.Error(ctx, 500, "搜索失败")
+			return
+		}
+		req.Data = data
+		req.TotalPage = math.Ceil(float64(req.Total) / float64(req.Size))
+		res.Success(ctx, req)
+	}
+}
+
+// @Summary		新增货品
+// @Description	此接口用于新增原材料或制品， 新增时包括 计量和属性值
+// @Accept			json
+// @Produce		json
+// @Param			货品种类	body		dto.ReqAddCargo	true	"货品种类和属性"
+// @Response		200		{object}	Response			"status 200 表示成功 否则提示msg内容"
+// @Router			/cargo [post]
+func (c *cargoApi) AddCargo() gin.HandlerFunc {
+	return func(ctx *gin.Context) {
+
 	}
 }
